dnk what happened

--- a/aula12ex/ex015/estilo.css
+++ b/aula12ex/ex015/estilo.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(86, 44, 124, 0.472);
+    background-color: black;
     font: "Times New Roman" 12px;
 }
 
@@ -9,12 +9,16 @@ text-align: center;
 }
 
 section {
-background: whitesomoke;
+background: white;
 border-radius: 3px;
 padding: 12px;
 width: 400px;
 margin: auto;
 box-shadow: 3px 3px 5px black;
+}
+
+div{
+    text-align: center;
 }
 
 footer {
